fix header img overflow

--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -200,8 +200,9 @@ nav + .container {
   height: 360px;
   margin-top: -16px;
   opacity: 0.7;
-  background-size: cover;
   background-position: top center;
+  background-size: cover;
+  overflow: hidden;
 }
 
 .full-width {
